<resources>
    <string name="app_name">时光日记</string>


    <string name="not_have_data">暂无数据</string>
    <string name="In_the_load">加载中...</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>

    <string name="Press_exit_procedure_again">再按一次退出程序</string>
    <string name="share">分享</string>
    <string name="Copy_success">复制成功</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="title_dialog">提示</string>
    <string name="resume">重试</string>
    <string name="message_permission_rationale">为保证程序的正常使用,请打开以下权限:\n\n%1$s</string>
    <string name="message_permission_always_failed">请在设置中打开以下权限:\n\n%1$s</string>
    <string name="message_setting_comeback">从设置页面返回</string>
    <string name="message_install_failed">系统拒绝了程序的安装</string>
    <string name="message_overlay_failed">系统拒绝了其他程序的安装</string>
    <string name="message_error_storage">请检查外部存储设备</string>
    <string name="search">搜索</string>
    <string name="More">更多</string>
    <string name="Change_batches">换一批</string>
    <string name="I_have_bottom_line">我是有底线的</string>
    <string name="logout_hit_message">确定要退出应用吗?</string>
    <string name="Determine">确定</string>
    <string name="Cancel">取消</string>
    <string name="onLine_Playing">正在播放:%s</string>
    <string name="Duration">时长:%s</string>
    <string name="Playback_volume">播放量: %s次观看</string>
    <string name="Collection">收藏</string>
    <string name="Unlimited_Viewing">无限观看</string>
    <string name="Cache_Download">缓存下载</string>
    <string name="Guess_you_like_it">猜你喜欢</string>
    <string name="All_Channels">全部频道</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="My_Channel">我的频道</string>
    <string name="Recommended_Channel">推荐频道</string>


</resources>
