<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:background="@drawable/shape_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHitMessage"
        style="@style/TextViewBody13SpStyle"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:text="@string/logout_hit_message"
        android:textSize="15sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_ddd" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvCancel"
            style="@style/TextViewBody13SpStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Cancel" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@color/color_ddd" />

        <TextView
            android:id="@+id/tvDetermine"
            style="@style/TextViewBody13SpStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Determine" />

    </LinearLayout>

</LinearLayout>
