<?xml version="1.0" encoding="utf-8"?>
<com.zhowin.viewlibrary.view.NoNestedScrollview xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/noNestedScrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:orientation="vertical">

            <com.zhowin.timediary.home.view.SunVideoView
                android:id="@+id/videoPlayer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>


        <TextView
            style="@style/TextViewBody13SpStyle"
            android:layout_margin="@dimen/spacing_6"
            android:text="@string/onLine_Playing"
            android:textColor="@color/color_1a1a1a"
            android:textSize="17sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_30">


            <TextView
                style="@style/TextViewBody13SpStyle"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/spacing_10"
                android:drawableLeft="@drawable/icon_search"
                android:drawablePadding="@dimen/spacing_6"
                android:text="@string/Duration" />


            <TextView
                style="@style/TextViewBody13SpStyle"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/spacing_10"
                android:text="@string/Playback_volume" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_44">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/spacing_10">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_search" />

                <TextView
                    style="@style/TextViewBody13SpStyle"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/spacing_8"
                    android:text="1000"
                    android:textColor="@color/color_73787a" />
            </LinearLayout>

            <com.zhowin.timediary.common.progress.RoundCornerProgressBar xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="@dimen/spacing_200"
                android:layout_height="@dimen/spacing_10"
                android:layout_centerInParent="true"
                app:rcBackgroundColor="@color/color_ff4f4c"
                app:rcProgress="70"
                app:rcProgressColor="@color/theme_color"
                app:rcRadius="5dp"
                app:rcReverse="false" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/spacing_20">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_search" />

                <TextView
                    style="@style/TextViewBody13SpStyle"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/spacing_8"
                    android:text="1000"
                    android:textColor="@color/color_73787a" />
            </LinearLayout>


        </RelativeLayout>

        <View
            style="@style/DivideLineStyle"
            android:layout_margin="@dimen/spacing_10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_70"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_search" />

                <TextView
                    style="@style/TextViewBody13SpStyle"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_4"
                    android:text="@string/Collection"
                    android:textColor="@color/color_73787a" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_search" />

                <TextView
                    style="@style/TextViewBody13SpStyle"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_4"
                    android:text="@string/Unlimited_Viewing"
                    android:textColor="@color/color_73787a" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_search" />

                <TextView
                    style="@style/TextViewBody13SpStyle"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_4"
                    android:text="@string/share"
                    android:textColor="@color/color_73787a" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_search" />

                <TextView
                    style="@style/TextViewBody13SpStyle"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_4"
                    android:text="@string/Cache_Download"
                    android:textColor="@color/color_73787a" />

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_86"
            android:background="@color/color_73787a" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_86"
            android:background="@color/color_b4b8bc"
            android:visibility="visible" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_86"
            android:background="@color/color_73787a"
            android:visibility="visible" />

        <TextView
            style="@style/TextViewBody13SpStyle"
            android:layout_height="@dimen/spacing_40"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/spacing_10"
            android:gravity="center"
            android:text="@string/Guess_you_like_it"
            android:textColor="@color/color_1a1a1a"
            android:textSize="17sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/GuessLikeRecyclerView"
            style="@style/RecycleViewCommonStyle" />

    </LinearLayout>

</com.zhowin.viewlibrary.view.NoNestedScrollview>